projects/vb6parse/snapshots/tests/library/string/trim/trim_with_statement.snap
---
source: projects/vb6parse/tests/library/string/trim.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: WithStatement
      children:
        - kind: WithKeyword
          text: With
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: record
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "                "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: Name
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Trim
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Name
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "            "
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: WithKeyword
          text: With
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
